--- a/page1.html
+++ b/page1.html
@@ -57,12 +57,12 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html"><strong>Beranda</strong></a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html"><strong>Beranda</strong></a></li>
                     <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page1.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Profil</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-711"><a class="dropdown-item text-black display-4" href="page6.html">Sejarah Sekolah</a><a class="dropdown-item text-black display-4" href="page8.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="page7.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="page9.html">Data Guru &amp; Karyawan</a><a class="dropdown-item text-black display-4" href="page10.html">Identitas</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page4.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Akademik</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-346"><a class="dropdown-item text-black display-4" href="page11.html">Kegiatan</a></div></li>
                     <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="index.html#pricing2-c" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Informasi</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-256"><a class="dropdown-item text-black display-4" href="page12.html">Pengumuman</a><a class="dropdown-item text-black display-4" href="page16.html">Pendaftaran PPDB</a></div>
-                    </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page14.html"><strong>Galeri</strong></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page15.html"><strong>Kontak</strong></a></li></ul>
+                    </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page14.html"><strong>Galeri</strong></a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-danger display-4" href="https://wa.me/62 82246962898">Kontak</a></div>
+                
             </div>
         </div>
     </nav>
@@ -103,7 +103,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise.com </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
