--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="ufELP1BoG5" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="ug3taGYlSY" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ufELP1BoG5" data-bs-target="#ufELP1BoG5"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ufELP1BoG5" data-bs-target="#ufELP1BoG5"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ufELP1BoG5" data-bs-target="#ufELP1BoG5"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ug3taGYlSY" data-bs-target="#ug3taGYlSY"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ug3taGYlSY" data-bs-target="#ug3taGYlSY"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ug3taGYlSY" data-bs-target="#ug3taGYlSY"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -143,11 +143,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ufELP1BoG5">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ug3taGYlSY">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ufELP1BoG5">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ug3taGYlSY">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
